RESOLVED FIXED244990
[WebAuthn] Give back user gesture freebie after successful assertion/registration
https://bugs.webkit.org/show_bug.cgi?id=244990
Summary [WebAuthn] Give back user gesture freebie after successful assertion/registra...
pascoe@apple.com
Reported 2022-09-09 11:04:55 PDT
Some SPA-based application's user gestures don't register, causing headaches with WebAuthn flows. Here we partially mitigate that issue by restoring the user gesture freebie upon a successful registration/assertion.
Attachments
pascoe@apple.com
Comment 1 2022-09-09 11:05:07 PDT
pascoe@apple.com
Comment 2 2022-09-09 11:21:10 PDT
EWS
Comment 3 2022-12-15 10:49:27 PST
Committed 257940@main (a6664c87fe8f): <https://commits.webkit.org/257940@main> Reviewed commits have been landed. Closing PR #4179 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.